fix: Add canvas for emscripten

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
   <head>
     <title>Snake</title>
+     <script>
+        var Module = {
+            canvas: document.getElementById('canvas'),
+        };
+    </script>
     <script src="snake.js"></script>
   </head>
   <body>
-    <h1>Snake</h1>
+        <canvas id="canvas"></canvas>
   </body>
 </html>
