feat: Add favicon

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Snake</title>
+      <link rel="icon" type="image/x-icon" href="cobra.png">
   </head>
   <body>
         <canvas id="canvas"></canvas>
