feat: Add optional mouse controls
Currently enabled by default.
Ideally for use on touch based devices that lack a keyboard.
Added a rectangle module that implements its own draw and intersects function to represent the touch/mouse controls.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Snake</title>
+    <title>Snek</title>
       <link rel="icon" type="image/x-icon" href="cobra.png">
   </head>
   <body>
